--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@ setInterval(() => {
   <a href="Tsunami Survival!.html" class="game-button" target="_blank" rel="noopener">Tsunami Survival!</a>
   <a href="citysim.html" class="game-button" target="_blank" rel="noopener">Kareem's City Simulator</a>
   <a href="banana.html" class="game-button" target="_blank" rel="noopener">Banana World</a>
-  <a href="Posters.html" class="game-button" target="_blank" rel="noopener">Posters (NEW! but not safe)</a>
+  <a href="Posters.html" class="game-button" target="_blank" rel="noopener">Posters (NEW! but not safe.. and broken)</a>
 </div>
   <p>credits to impossible quiz for music</p>
 <div id="copyright" align="center">
@@ -209,6 +209,7 @@ setInterval(() => {
 
 </body>
 </html>
+
 
 
 
