--- a/index.html
+++ b/index.html
@@ -66,7 +66,6 @@ setInterval(() => {
   .torture-text {
     margin-bottom: 40px;
     font-size: 1.2rem;
-    font-style: italic;
     color: #fff;
     text-shadow: 1px 1px 3px #0008;
   }
@@ -244,7 +243,7 @@ setInterval(() => {
   })();
 </script>
 
-<div class="torture-text">i torture chatgpt here* (*and myself)</div>
+<div class="torture-text">My Games</div>
  <a href="about me.html" class="game-button" target="_blank" rel="noopener">About Me</a>
 <div class="gallery">
   <a href="MusicPlayer.html" class="game-button" target="_blank" rel="noopener">Kareem's Music Player</a>
@@ -298,6 +297,7 @@ setInterval(() => {
 
 </body>
 </html>
+
 
 
 
