--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@ setInterval(() => {
   <a href="Tsunami Survival!.html" class="game-button" target="_blank" rel="noopener">Tsunami Survival!</a>
   <a href="citysim.html" class="game-button" target="_blank" rel="noopener">Kareem's City Simulator</a>
   <a href="banana.html" class="game-button" target="_blank" rel="noopener">Banana World</a>
-  <a href="Posters.html" class="game-button" target="_blank" rel="noopener">Posters (NEW! but not safe.. and broken)</a>
+  <a href="Posters.html" class="game-button" target="_blank" rel="noopener">Posters (not safe.. and broken)</a>
+  <a href="downloadtablet.html" class="game-button" target="_blank" rel="noopener">Download Code for your own Video Tablet! (NEW!)</a>
 </div>
   <p>credits to impossible quiz for music</p>
 <div id="copyright" align="center">
@@ -210,6 +211,7 @@ setInterval(() => {
 
 </body>
 </html>
+
 
 
 
