--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ setInterval(() => {
 </div>
   <h1>Welcome to KareemWeb!</h1>
   <a href= "homepagev2.html">new homepage</a>
-<h2>buffalo buffalo buffalo buffalo buffalo buffalo buffalo buffalo!</h2>
+<h2>canadian tired</h2>
 <div class="torture-text">My Games</div>
  <a href="about me.html" class="game-button" target="_blank" rel="noopener">About Me</a>
 <div class="gallery">
@@ -211,6 +211,7 @@ setInterval(() => {
 
 </body>
 </html>
+
 
 
 
